--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/trainapp
+spring.datasource.username=trainapp
+spring.datasource.password=budpyq-wocPev-worgu0
 
+spring.main.banner-mode=off
+logging.level.root=warn
