user login created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.password=budpyq-wocPev-worgu0
 
 spring.main.banner-mode=off
 logging.level.root=warn
+
+# Security Config, not in use anymore
+#spring.security.user.name=user
+#spring.security.user.password=password
+#spring.security.user.roles=admin
+
+# AWS Config
+# server.port=5000
